# trovis-modbus-hass

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
custom_components/trovis557x/: __init__.py  _local_dev.py  _vendor.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  field_spec.py  manifest.json  manifest.json.pymodbus  metadata.py  number.py  select.py  sensor.py  strings.json  switch.py  water_heater.py
custom_components/trovis557x/translations/: de.json  en.json
scripts/: vendor.sh
tests/: conftest.py  test_ha_integration.py  test_vendored_stack.py
