[project]
name = "trovis-modbus-hass-tmodbus-tests"
version = "0"
description = "Dev/test environment for the Trovis 557x custom component (tmodbus)."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    # The integration's runtime requirements, from PyPI (same as the manifest):
    # the device library and the connection layer with its tmodbus backend.
    "trovis-modbus==1.0.0",
    "modbus-connection[tmodbus]==3.0.0",
    # pymodbus is only used to stand up the in-process Modbus *server* the tests
    # talk to (a backend-neutral device on the wire), not as the client backend.
    "pymodbus[serial]==3.11.2",
    # Real Home Assistant + harness, to test the config flow and entry setup.
    "pytest-homeassistant-custom-component",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
